--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@
 ############################
 
 # Name of website
-title:FK ALL
-
+title:Xu Xin
 # Your name to show in the footer
 author: Some Person
 
