--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 # Name of website
 title: Xu Xin
 # Your name to show in the footer
-author: Some Person
+author: Xu Xin
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -99,7 +99,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
