--- a/_config.yml
+++ b/_config.yml
@@ -149,8 +149,8 @@ footer-hover-col: "#0085A1"
 # instead of colour
 
 # navbar-img: "/assets/img/bg.jpg"
-footer-img: "/assets/img/bg.jpg"
-# page-img: "/assets/img/bg.jpg"
+# footer-img: "/assets/img/bg.jpg"
+page-img: "/assets/img/bg.jpg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
