--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ footer-hover-col: "#0085A1"
 
 # navbar-img: "/assets/img/bg.jpg"
 # footer-img: "/assets/img/bg.jpg"
-# page-img: "/assets/img/bg.jpg"
+page-img: "/assets/img/background.jpg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
